# Credit_Risk_Intelligence-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
infra/: docker-compose.yml
infra/.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_feature_exploration.ipynb  03_model_selection.ipynb
scripts/: batch_ingest.py
src/api/: __init__.py  applicant.py  db.py  health.py  main.py  middleware.py  portfolio.py  predict.py  schemas.py
src/dashboard/: app.py
src/dashboard/pages/: borrower.py  model_health.py  portfolio.py
src/features/: build_features.py  feature_registry.py
src/models/: evaluate.py  promote.py  train.py  train_fair.py
src/monitoring/: alert.py  drift_report.py
tests/: conftest.py
tests/integration/: test_api.py
