[project]
name = "credit-risk-intelligence-platform"
version = "0.1.0"
description = "Credit risk scoring + explainability + API + dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # Data & ML
  "polars>=1.0.0",
  "duckdb>=1.0.0",
  "pyarrow>=16.0.0",
  "scikit-learn>=1.5.0",
  "xgboost>=2.0.0",
  "lightgbm>=4.5.0",
  "mlflow>=2.14.0",
  "shap>=0.46.0",
  "optuna>=4.0.0",

  # API
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",

  # Data quality & monitoring
  "great-expectations>=0.18.0",
  "evidently>=0.5.0",

  # Config
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
]
dashboard = [
  "streamlit>=1.36.0",
  "plotly>=5.22.0",
  "requests>=2.32.0",
]
notebooks = [
  "matplotlib>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# sys.path bootstrap blocks must precede regular imports in these files
"src/api/predict.py" = ["E402"]
"src/api/portfolio.py" = ["E402"]
"tests/integration/test_api.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

